--- a/E-commerce Product Page/index.html
+++ b/E-commerce Product Page/index.html
@@ -70,7 +70,7 @@
                     id="item-quantity-icon">0</span>
             </div>
 
-            <div class="absolute top-28 right-[1.5] min-tablet:right-10 w-360 h-64 shadow-2xl rounded-xl hidden z-50 bg-white"
+            <div class="absolute top-28 right-[1.5] min-tablet:right-10 w-320 h-72 min-tablet:w-380 min-tablet:h-64 shadow-2xl rounded-xl hidden z-50 bg-white"
                 id="shopping-cart-container">
                 <span class="font-semibold text-lg block p-6 border-b-2 border-b-gray-100 text-gray-primary">
                     Cart
@@ -105,7 +105,7 @@
                         </div>
 
                         <div
-                            class="bg-orange-primary w-full mt-8 p-4 text-white rounded-lg font-bold transition-all hover:bg-opacity-50 text-center shadow-lg shadow-orange-200 cursor-pointer">
+                            class="bg-orange-primary w-full mt-7 p-4 text-white rounded-lg font-bold transition-all hover:bg-opacity-50 text-center shadow-lg shadow-orange-200 cursor-pointer">
                             <button type="button">Chekout</button>
                         </div>
                     </div>
